--- a/CrmPro/Views/CustomerCompany/Details.cshtml
+++ b/CrmPro/Views/CustomerCompany/Details.cshtml
@@ -22,6 +22,8 @@
         <div class="easyui-tabs" id="detailsTab" data-options="fit:true">
             <div title="人员信息" href="@Url.Action("index", "customer", new { ID = Model.ID })">
             </div>
+            <div title="计划日志" href="@Url.Action("index", "planlog", new { ID = Model.ID })">
+            </div>
         </div>
     </div>
 </div>
