--- a/CrmPro/Views/PlanLog/Index.cshtml
+++ b/CrmPro/Views/PlanLog/Index.cshtml
@@ -1,21 +1,20 @@
-﻿@{
+﻿@model PlanLogSearchViewModel
+@{
     ViewBag.Title = "PlanLog";
 }
 
-<table id="PlanLog_dg" title="PlanLog" class="easyui-datagrid"  
-    url="@Url.Action("getall")"
-    toolbar="#PlanLog_toolbar" pagination="true" pagePosition="bottom"
+<table id="PlanLog_dg" class="easyui-datagrid"  
+    url="@Url.Action("getall", new { ID = Model.ID, PlanLog_SearchName = "" })"
+    toolbar="#PlanLog_toolbar" pagination="true" pagePosition="bottom" border="false"
     rownumbers="true" fitcolumns="true" singleselect="true" fit="true" striped="true">
     <thead>
         <tr>
-            <th field="ID" width="50">ID</th>
-            <th field="CompanyID" width="50">CompanyID</th>
-            <th field="AddTime" width="50">录入时间</th>
             <th field="AddUserName" width="50">录入者</th>
-            <th field="PlanTime" width="50">计划时间</th>
+            <th field="AddTime" width="50" formatter="Maitonn.JHelper.DateFormatter">录入时间</th>
+            <th field="PlanTime" width="50" formatter="Maitonn.JHelper.DateFormatter">计划时间</th>
             <th field="Content" width="50">内容</th>
-            <th field="Comment" width="50">Comment</th>
-            <th field="CommentTitme" width="50">CommentTitme</th>
+            <th field="Comment" width="50">点评</th>
+            <th field="CommentTitme" width="50" formatter="Maitonn.JHelper.DateFormatter">点评时间</th>
         </tr>
     </thead>
 </table>
@@ -80,7 +79,6 @@
             });
         }
     }
-
     function PlanLog_ajaxFormSuccess(res) {
         Maitonn.JHelper.showMessage(res);
         if (res.Success) {
@@ -94,14 +92,5 @@
             PlanLog_SearchName: $('#PlanLog_SearchName').val()
         });
     }
-    $(function () {
-        var resizeHandler = null;
-        $(window).resize(function () {
-            if (resizeHandler) clearTimeout(resizeHandler);
-            resizeHandler = setTimeout(function () {
-                $('#PlanLog_dg').datagrid('resize');
-            }, 200);
-        });
-    })
 </script>
 
